// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reposReducer return initialState หากไม่เจอ action ที่ตรงกัน 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "repos": null,
}
`;

exports[`reposReducer จัดการกับเคส failure action 1`] = `
Object {
  "error": [Error: ดูผมดิ ผมเออเร่อ],
  "isLoading": false,
  "repos": null,
}
`;

exports[`reposReducer จัดการกับเคส request action 1`] = `
Object {
  "error": null,
  "isLoading": true,
  "repos": null,
}
`;

exports[`reposReducer จัดการกับเคส success action แบบ snapshot 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "repos": Array [
    Object {
      "description": "Useful description goes here.",
      "id": 1,
      "name": "Test 1",
      "stargazers_count": 50000,
    },
    Object {
      "description": "Useful description goes here.",
      "id": 2,
      "name": "Test 2",
      "stargazers_count": 10000,
    },
    Object {
      "description": "Useful description goes here.",
      "id": 3,
      "name": "Test 3",
      "stargazers_count": 499,
    },
  ],
}
`;
